.kubernetes/platforms-api.yaml
# Platform app deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-api
  template:
    metadata:
      labels:
        app: platform-api
    spec:
      containers:
      - name: platform-api
        image: wuerike/platform-api:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000

---

# Platform app cluster IP
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platform-api
  ports:
  - name: platform-api
    protocol: TCP
    port: 80
    targetPort: 5000
