.kubernetes/platforms-np-srv.yaml
# Nodeport service
apiVersion: v1
kind: Service
metadata:
  name: platform-np-service
spec:
  type: NodePort
  selector:
    app: platform-api
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30000
